# morepath

./: .ci_tox.ini  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis-tox.ini  .travis.yml  .travis_tox.ini  CHANGES.txt  CREDITS.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  buildout.cfg  develop_requirements.txt  doc_requirements.txt  newlink.txt  path_conflicts.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  travis_requirements.txt
.github/workflows/: main.yml
doc/: Makefile  advanced-topics.rst  api-reference.rst  api.rst  app_reuse.rst  building_large_applications.rst  community.rst  compared.rst  conf.py  config_query.rst  configuration.rst  contributor-guide.rst  design.rst  developing.rst  directive_tricks.rst  examples.rst  extension_api.rst  getting-started.rst  history.rst  implementation.rst  index.rst  installation.rst  json.rst  logging.rst  make.bat  models_and_linking.rst  more.static.rst  organizing_your_project.rst  paths_and_linking.rst  project-history.rst  quickstart.rst  rest.rst  security.rst  settings.rst  superpowers.rst  templates.rst  testing.rst  toc.rst  tweens.rst  upgrading.rst  (+3 more)
doc/code_examples/: hello.py  settings.json  settings.yml
doc/internals/: app.rst  authentication.rst  autosetup.rst  cachingreg.rst  compat.rst  converter.rst  core.rst  directive.rst  generic.rst  implicit.rst  path.rst  predicate.rst  publish.rst  reify.rst  request.rst  security.rst  settings.rst  template.rst  toposort.rst  traject.rst  tween.rst  view.rst
fixture_packages/base/: setup.py
fixture_packages/base/base/: extra.py  m.py
fixture_packages/entry-point/: setup.py
fixture_packages/entry-point/entrypoint/: app.py
fixture_packages/no_mp/: setup.py
fixture_packages/no_mp_ns/: setup.py
fixture_packages/no_mp_sub/: setup.py
fixture_packages/ns/: setup.py
fixture_packages/ns2/: setup.py
fixture_packages/sub/: setup.py
fixture_packages/under_score/: setup.py
fixture_packages/under_score/under_score/: m.py
morepath/: __init__.py  action.py  app.py  authentication.py  autosetup.py  backwards.py  cachingreg.py  compat.py  config.py  configure.py  converter.py  core.py  directive.py  dispatch.py  error.py  framehack.py  generic.py  implicit.py  initialize.py  interfaces.py  link.py  mapply.py  model.py  mount.py  neotraject.py  path.py  pathstack.py  pdbsupport.py  predicate.py  publish.py  registry.py  reify.py  request.py  resolve.py  resource.py  run.py  security.py  settings.py  setup.py  sphinxext.py  (+5 more)
morepath/tests/: capturelog.py  conftest.py  test_app.py  test_autosetup.py  test_base.py  test_capturelog.py  test_cleanup.py  test_code_info.py  test_compat.py  test_config.py  test_config_logging.py  test_converter.py  test_defer_links.py  test_deprecation.py  test_directive.py  test_error.py  test_excview.py  test_extend.py  test_function_directive.py  test_implicit.py  test_init_settings.py  test_internal.py  test_json_obj.py  test_link.py  test_load.py  test_mapply.py  test_method_directive.py  test_model.py  test_model_directive.py  test_mount_directive.py  test_neotraject.py  test_path_directive.py  test_path_tool.py  test_pathstack.py  test_permission.py  test_predicate.py  test_predicates.py  test_publish.py  test_querytool.py  test_reify.py  (+14 more)
morepath/tests/fixtures/: abbr.py  basic.py  conflict.py  conflicterror.py  identity_policy.py  mapply_bug.py  method.py  nested.py  noconverter.py  normalmethod.py  template.py  template_engine.py  template_no_template_directories.py  (+5 more)
requirements/: corelibs.txt  develop.txt  docs.txt  fixtures.txt  src.txt
(+22 files in other folders)
